@startuml 05-subsistema-servicos
' =========================================================================
'  Subsistema :: Serviços (de reparação)  (interface iServicos)
'  Fonte: Backend/{Controllers,Services,Models}/Servicos
'  Engloba: ciclo de vida do Serviço (AGENDADO..FECHADO),
'  Agenda (slots por mecânico), histórico de intervenções e peças usadas.
' =========================================================================
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
hide empty members
title Subsistema de Serviços de Reparação  —  <<provides>> iServicos

' =========================================================================
'  Camada :: Models  (DTOs e subestruturas)
' =========================================================================
package "Backend.Models (Servicos)" <<Folder>> {

    class ServicoDto <<DTO>> {
        + ServicoID : int
        + TrotineteNumSerie : string
        + Estado : string  <<AGENDADO | EM_DIAGNOSTICO | ORCAMENTADO | EM_REPARACAO | CONCLUIDO | FECHADO>>
        + DataAgendamento : DateTime
        + DescricaoDiagnostico : string?
        + FeedbackCliente : string?
        + DataConclusao : DateTime?
        + Preco : decimal
        + HistoricoIntervencoes : List<IntervencaoRealizadaDto>
    }
    class IntervencaoRealizadaDto <<DTO>> {
        + IntervencaoCatalogoID : int
        + MecanicoNumero : string
        + DataInicio : DateTime
        + DataFim : DateTime?
        + TempoGastoMinutos : int?
        + PecasUtilizadas : List<PecaUtilizadaDto>
    }
    class PecaUtilizadaDto <<DTO>> {
        + PecaEAN : string
        + Quantidade : int
    }
    class ServicoCriacaoDto <<DTO>> {
        + TrotineteNumSerie : string  <<[Required]>>
        + FeedbackCliente : string?
    }
    class ServicoAtualizacaoDto <<DTO>> {
        + Estado : string?
        + DescricaoDiagnostico : string?
        + Preco : decimal?
        + DataConclusao : DateTime?
        + HistoricoIntervencoes : List<IntervencaoRealizadaDto>?
    }
    class LevantarTrotineteDto <<DTO>> {
        + MetodoPagamento : string  <<[Required]>>
    }
    class LevantamentoComFaturaDto <<DTO>> {
        + Fatura : FaturaDto
    }
    class TrotineteProntaDto <<DTO>> {
        + ServicoID : int
        + TrotineteNumSerie : string
        + Marca : string?
        + Modelo : string?
        + ClienteNIF : string
        + DataAgendamento : DateTime
        + DataConclusao : DateTime?
        + Preco : decimal
        + DescricaoDiagnostico : string?
    }

    class AgendaDto <<DTO>> {
        + AgendaID : int
        + MecanicoNumero : string
        + ServicoID : int
        + TipoSlot : string  <<"Diagnostico" | "Reparacao">>
        + IntervencaoID : int?
        + DataHoraInicio : DateTime
        + Estado : string = "Agendado"
    }
    class AgendaCriacaoDto <<DTO>> {
        + AgendaID : int  <<[Required]>>
        + MecanicoNumero : string
        + ServicoID : int  <<[Required]>>
        + TipoSlot : string  <<[Required]>>
        + IntervencaoID : int
        + DataHoraInicio : DateTime  <<[Required]>>
        + Estado : string = "Agendado"
    }

    ' Composições entre DTOs
    ServicoDto            "1" *-- "0..*" IntervencaoRealizadaDto
    IntervencaoRealizadaDto "1" *-- "0..*" PecaUtilizadaDto
    LevantamentoComFaturaDto "1" --> "1" FaturaDto

    ' DTO importado (externo)
    class FaturaDto <<external>>
}

' =========================================================================
'  Camada :: Services  (lógica de negócio)
' =========================================================================
package "Backend.Services (Servicos)" <<Folder>> {

    interface IServicoService <<interface>> {
        + ListarTodosAsync() : Task<IEnumerable<ServicoDto>>
        + ObterPorIdAsync(id : int) : Task<ServicoDto?>
        + CriarServicoDiagnosticoAsync(dto : ServicoCriacaoDto) : Task<ServicoDto?>
        + AtualizarEstadoAsync(id : int, novoEstado : string) : Task<bool>
        + AtualizarServicoAsync(id : int, dto : ServicoAtualizacaoDto) : Task<ServicoDto?>
        + ListarProntasAsync() : Task<IEnumerable<TrotineteProntaDto>>
        + FecharServicoAsync(id : int) : Task<bool>
        + LevantarComFaturaAsync(id : int, metodoPagamento : string) : Task<LevantamentoComFaturaDto?>
    }

    interface IAgendaService <<interface>> {
        + ListarAgendaAsync() : Task<IEnumerable<AgendaDto>>
        + ObterSlotPorIdAsync(id : int) : Task<AgendaDto?>
        + CriarSlotAsync(dto : AgendaCriacaoDto) : Task<AgendaDto?>
        + EliminarSlotAsync(id : int) : Task<bool>
        + AtualizarSlotAsync(id : int, dto : AgendaDto) : Task<AgendaDto?>
    }

    ' Interfaces externas consumidas via DI
    interface IClienteService     <<external>>
    interface IEmailService       <<external>>
    interface IFuncionarioService <<external>>

    class ServicoService {
        - _httpClient : HttpClient
        - _clienteService : IClienteService
        - _emailService : IEmailService
        --
        + ServicoService(httpClient, clienteService, emailService)
    }
    class AgendaService {
        - _httpClient : HttpClient
        --
        + AgendaService(httpClient : HttpClient)
    }

    ServicoService .up.|> IServicoService
    AgendaService  .up.|> IAgendaService
}

ServicoService ..> IClienteService : «DI»
ServicoService ..> IEmailService   : «DI»

' =========================================================================
'  Camada :: Controllers  (endpoints REST)
' =========================================================================
package "Backend.Controllers (Servicos)" <<Folder>> {

    class ServicosController <<RestController>> {
        - _servicoService : IServicoService
        --
        + GetTodos() : Task<IActionResult>  <<GET /api/servicos>>
        + GetPorId(id : int) : Task<IActionResult>  <<GET /api/servicos/{id}>>
        + Criar(dto : ServicoCriacaoDto) : Task<IActionResult>  <<POST /api/servicos>>
        + Atualizar(id : int, dto : ServicoAtualizacaoDto) : Task<IActionResult>  <<PUT /api/servicos/{id}>>
        + GetProntas() : Task<IActionResult>  <<GET /api/servicos/prontas>>
        + Fechar(id : int) : Task<IActionResult>  <<PUT /api/servicos/{id}/fechar>>
        + LevantarComFatura(id : int, dto : LevantarTrotineteDto) : Task<IActionResult>  <<PUT /api/servicos/{id}/levantar>>
    }

    class AgendaController <<RestController>> {
        - _agendaService : IAgendaService
        - _funcionarioService : IFuncionarioService
        --
        + AgendaController(agendaService, funcionarioService)
        + Listar() : Task<IActionResult>  <<GET /api/agenda>>
        + Obter(id : int) : Task<IActionResult>  <<GET /api/agenda/{id}>>
        + Criar(dto : AgendaCriacaoDto) : Task<IActionResult>  <<POST /api/agenda>>
        + Atualizar(id : int, dto : AgendaDto) : Task<IActionResult>  <<PUT /api/agenda/{id}>>
        + Eliminar(id : int) : Task<IActionResult>  <<DELETE /api/agenda/{id}>>
    }
}

ServicosController ..> IServicoService      : «DI»
AgendaController   ..> IAgendaService       : «DI»
AgendaController   ..> IFuncionarioService  : «DI»

ServicosController ..> ServicoCriacaoDto     : <<bind>>
ServicosController ..> ServicoAtualizacaoDto : <<bind>>
ServicosController ..> LevantarTrotineteDto  : <<bind>>
AgendaController   ..> AgendaCriacaoDto      : <<bind>>
AgendaController   ..> AgendaDto             : <<bind>>

' =========================================================================
'  Interface provida no diagrama de componentes  (lollipop «iServicos»)
' =========================================================================
interface "iServicos" as iServicos <<provided>>
ServicosController  -up- iServicos : <<realize>>
AgendaController    -up- iServicos : <<realize>>

note right of ServicoService
  **Conclusão de reparação**
  Quando Estado → CONCLUIDO, o serviço
  obtém o email do cliente via iUtilizadores
  (IClienteService) e dispara
  NotificarTrotineteProntaAsync(...) via
  iEmail (IEmailService) em fire-and-forget.
end note

note right of AgendaController
  Na criação de slot, se nenhum MecanicoNumero
  for fornecido, é escolhido aleatoriamente um
  funcionário com Cargo="MECANICO" (via iUtilizadores).
end note

@enduml
